# remote-code-execution-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.api.prod  Dockerfile.frontend  Dockerfile.frontend.prod  Dockerfile.worker  Dockerfile.worker.prod  README.md  alembic.ini  check_test_cases.py  docker-compose.yml  env.example  pyproject.toml  rce_online_judge_design_v3.md  redis_client.py  seed_problems_v2.py  seed_topics.py  servers.json
.github/workflows/: deploy.yml  fern-docs.yml
.postman/: resources.yaml
api/: agent.py  main.py  prompts.py  websocket.py
api/routes/: auth.py  health.py  problems.py  submissions.py  submit.py  tools.py  topics.py
auth/: dependencies.py  emailer.py  security.py  verification.py
config/: settings.py
db/: base.py  models.py  queries.py  sync_session.py
db/migrations/: env.py
docker/clang/: Dockerfile
docker/cpp/: Dockerfile
docker/java/: Dockerfile
docker/nodejs/: Dockerfile
docker/python/: Dockerfile
docs/: TECHNICAL_REQUIREMENTS.md  db-erd.mmd
fern/: ai_examples_override.yml  docs.yml  fern.config.json  generators.yml  openapi.yml
fern/docs/: overview.md
frontend/: .gitignore  next.config.ts  openapi-ts.config.ts  package-lock.json  package.json
infra/: seccomp.json
mcp-server/: Dockerfile  main.py
rate_limit/: __init__.py  sliding_window.py  token_bucket.py
scripts/: build_images.sh  generate_erd_svg.py  generate_openapi.py  migrate.sh  seed_db.py  seed_two_sum.py
shared/: enums.py  models.py
worker/: app.py  beat_schedule.py  celeryconfig.py  compile.py  execute.py  fairness.py  runners.py  sandbox.py  tasks.py
(+57 files in other folders)
