[project]
name = "leetcode-clone"
version = "1.0.0"
description = "Backend for LeetCode Clone"
requires-python = ">=3.10"

dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # Auth
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5",
    "email-validator>=2.1.0",
    "resend>=2.4.0",
    # Database (async for FastAPI, sync for Celery)
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",          # async PostgreSQL driver
    "psycopg2-binary>=2.9.0",   # sync PostgreSQL driver (Celery)
    "alembic>=1.13.0",
    # Redis
    "redis>=5.0.0",             # includes redis.asyncio
    # Task queue
    "celery>=5.4.0",
    # Settings
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",            # async test client for FastAPI
]

[project.scripts]
generate-erd = "scripts.generate_erd_svg:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "auth*", "config*", "db*", "rate_limit*", "scripts*", "shared*", "worker*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
